feat: add ActionItem component for scroll-to-top and contact buttons
feat: implement CartDialog component for product selection and display

feat: create ProductSwiper component for displaying products in a carousel

feat: add Tittle component for styled section titles

feat: develop reusable Dialog components for modal functionality

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,3 +7,14 @@
   -ms-overflow-style: none; /* IE, Edge */
   scrollbar-width: none; /* Firefox */
 }
+
+/* Container pagination */
+.swiper-pagination {
+  @apply !relative mt-6 flex justify-center;
+}
+
+:root {
+  --swiper-theme-color: #ff6b00;
+  --swiper-navigation-color: #111111;
+  --swiper-pagination-color: #111111;
+}
