--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,4 +17,6 @@
   --swiper-theme-color: #ff6b00;
   --swiper-navigation-color: #111111;
   --swiper-pagination-color: #111111;
+
+  --red-light: #e70303;
 }
